--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -82,11 +82,11 @@
 <script type="text/javascript" src="{{&site_url}}/lin_alg.js"></script>
 <script type="text/javascript" src="{{&site_url}}/virtual_texture.js"></script>
 <script type="text/javascript" src="{{&site_url}}/pro4.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/spectorjs@0.9.30/dist/spector.bundle.js"></script>
+<!--<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/spectorjs@0.9.30/dist/spector.bundle.js"></script>-->
 <script>
-    var spector = new SPECTOR.Spector();
-    spector.displayUI();
-    spector.spyCanvases();
+    // var spector = new SPECTOR.Spector();
+    // spector.displayUI();
+    // spector.spyCanvases();
 
     const user_credentials = "{{credentials}}";
     const file_path = "{{&file_path}}";
@@ -112,11 +112,12 @@
     /** @type {VirtualHeightMap} */
     let virtual_height_map = null;
     let virtual_street_map = null;
-    canvas3d.addEventListener("mousedown", (e) => { if (e.buttons == 1) canvas_drag_start = { x: e.clientX, y: e.clientY }; });
+    canvas3d.addEventListener("mousedown", (e) => { if (e.buttons == 1) canvas_drag_start = { x: e.screenX, y: e.screenY }; });
+    canvas3d.addEventListener("touchstart", (e) => {canvas_drag_start = { x: e.touches[0].screenX, y: e.touches[0].screenY}; });
     canvas3d.addEventListener("mousemove", async (event) => {
         if (canvas_drag_start) {
-            let xDel = canvas_drag_start.x - event.clientX;
-            let yDel = canvas_drag_start.y - event.clientY;
+            let xDel = canvas_drag_start.x - event.screenX;
+            let yDel = canvas_drag_start.y - event.screenY;
             camera_dir -= xDel * cam_rot_speed;
             if (camera_dir > 2 * Math.PI) camera_dir -= 2 * Math.PI;
             if (camera_dir < 0) camera_dir += 2 * Math.PI;
@@ -124,11 +125,27 @@
             if (camera_pitch > Math.PI / 2) camera_pitch = Math.PI / 2;
             if (camera_pitch < -Math.PI / 2) camera_pitch = -Math.PI / 2;
             await draw_scene();
-            canvas_drag_start = { x: event.clientX, y: event.clientY };
+            canvas_drag_start = { x: event.screenX, y: event.screenY };
+        }
+    });
+    canvas3d.addEventListener("touchmove", async (event) => {
+        if (canvas_drag_start) {
+            let xDel = canvas_drag_start.x - event.touches[0].screenX;
+            let yDel = canvas_drag_start.y - event.touches[0].screenY;
+            camera_dir -= xDel * cam_rot_speed * 2;
+            if (camera_dir > 2 * Math.PI) camera_dir -= 2 * Math.PI;
+            if (camera_dir < 0) camera_dir += 2 * Math.PI;
+            camera_pitch += yDel * cam_rot_speed * 2;
+            if (camera_pitch > Math.PI / 2) camera_pitch = Math.PI / 2;
+            if (camera_pitch < -Math.PI / 2) camera_pitch = -Math.PI / 2;
+            await draw_scene();
+            canvas_drag_start = { x: event.touches[0].screenX, y: event.touches[0].screenY };
         }
     });
     canvas3d.addEventListener("mouseup", (e) => { canvas_drag_start = null; });
     canvas3d.addEventListener("mouseleave", (e) => { canvas_drag_start = null; });
+    canvas3d.addEventListener("touchend", (e) => { canvas_drag_start = null; });
+    canvas3d.addEventListener("touchcancel", (e) => { canvas_drag_start = null; });
     canvas3d.addEventListener("wheel", async (e) => {
         let height_multiplier = Math.max(1, 0.005 * (Util.wgs_84_ddeg_to_m(camera_center.z()) - 1100))
         camera_center.add(get_forward_dir(camera_dir, camera_pitch).mul(.1 * cam_dir_speed * height_multiplier * e.deltaY))
@@ -379,6 +396,7 @@
         // out variables
         out vec2 world_pos;
         out vec2 uv_glob;
+        out vec2 uv_loc;
 
         ${Util.glsl_wgs_84_m_to_ddeg()}
         ${Util.glsl_wgs_84_to_uv()}
@@ -443,7 +461,7 @@
             // vec2 uv_glob;
             // vec3 tile_id = vec3(get_tile_index_uv(uv_glob));
             
-            /// uint t = texture(virtual_heightmap_index, uv_glob).x;
+            // uint t = texture(virtual_streetmap_index, vec2(gl_FragCoord.xy) / vec2(textureSize(virtual_streetmap_index, 0).xy) * 40.).x;
             // out_col = texture(virtual_heightmap, vec3(uv_glob, float(t - 1u)));
             // return;
             // if (t == 0u)
@@ -456,7 +474,7 @@
             // ivec2 xy = pixel_pos % 256;
             // ivec2 tile = pixel_pos / 256;
             // int lev = tile.x + tile.y * 16;
-            // out_col = texelFetch(virtual_heightmap, ivec3(xy, lev), 0);
+            // out_col = texelFetch(virtual_streetmap, ivec3(xy, lev), 0);
             // return;
 
             // uint t = texelFetch(virtual_heightmap_index, pixel_pos, 0).r;
@@ -470,15 +488,10 @@
             //     out_col = vec4(0.);
             // return;
 
-            vec4 encoded_height = virtual_streetmap_load(uv_glob);
-            out_col = vec4(encoded_height.xyz, 1);
-            return;
-            if (false && encoded_height.b == 0.)
-                out_col = vec4(1., 0, 0, 0);
-            else {
-                out_col = vec4(encoded_height.r * 256. + encoded_height.g + encoded_height.b / 256.) - 32768.;
-                out_col = (out_col - 500.) / 500.;
-            }
+            vec4 surface_col = virtual_streetmap_load(uv_glob);
+            if (surface_col == vec4(0))
+                surface_col = vec4(.7);
+            out_col = vec4(surface_col.xyz, 1);
             return;
             //out_col = vec4(uv_glob, tile_id.z / 15., 1.);
         }
