--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -534,9 +534,9 @@
             ivec3 tile_id = get_tile_index();
             float div = float((1 << 8) - 1);
             out_col = vec4(float(tile_id.y & 0xff) / div,
-                           float(((tile_id.x & 3) << 6) | ((tile_id.y >> 8) & 0x3f)) / div,
-                           float((tile_id.x >> 2) & 0xff) / div, 
-                           float((tile_id.z << 4) | ((tile_id.x >> 10)) & 0xf) / div);
+                           float(((tile_id.x & f) << 4) | ((tile_id.y >> 4) & 0xff)) / div,
+                           float((tile_id.x >> 4) & 0xff) / div, 
+                           float(tile_id.z) / div);
         }
         `;
 
@@ -590,7 +590,7 @@
         // linalg_tests();
         const is_mobile = navigator.userAgentData ? navigator.userAgentData.mobile: false;
         const is_chrome = navigator.userAgent.toLowerCase().indexOf("chrome") > -1;
-        const max_depth = is_mobile && is_chrome ? 12: 14;
+        const max_depth = 18;
         const v_width = 1 << max_depth;
         virtual_height_map = VirtualMap().init(v_width, v_width, { min_lat: 0, max_lat: 360, min_lon: -90, max_lon: 90 }, 256, 256, 255, TextureTypes(gl_context).un8rgba, gl_context);
         virtual_street_map = VirtualMap().init(v_width, v_width, { min_lat: 0, max_lat: 360, min_lon: -90, max_lon: 90 }, 256, 256, 255, TextureTypes(gl_context).un8rgba, gl_context);
